--- a/latexmath/final.tex
+++ b/latexmath/final.tex
@@ -57,12 +57,12 @@ she post her flag?
 \label{fig:10/7/12Fig1}
 \end{figure}                     
 \item Find the ratio in which the line segment joining the points $(-3,10) \text{ and } (6,-8)$ $\text{ is divided by } (-1,6)$.
-\item Find the ratio in which the line segment joining $A(1,-5) \text{ and } B(-4,5)$ $ \text{is divided by the x-axis}$. Also find the coordinates of the point of division.
+\item Find the ratio in which the line segment joining $A(1,-5) \text{ and } B(-4,5)$ $\text{is divided by the x-axis}$. Also find the coordinates of the point of division.
 \item If $(1,2), (4,y), (x,6), (3,5)$ are the vertices of a parallelogram taken in order, find x and y.
 \item Find the coordinates of a point A, where AB is the diameter of a circle whose centre is $(2,-3) \text{ and }$ B is $(1,4)$.
-\item If A \text{ and } B are $(-2,-2) \text{ and } (2,-4)$, respectively, find the coordinates of P such that AP= $\displaystyle \frac 37 $AB $\text{ and } P$ lies on the line segment AB.
+\item If A \text{ and } B are $(-2,-2) \text{ and } (2,-4)$, respectively, find the coordinates of P such that AP= $\displaystyle \frac 37$ AB $\text{ and }$ P lies on the line segment AB.
 \item Find the coordinates of the points which divide the line segment joining $A(-2,2) \text{ and } B(2,8)$ into four equal parts.
-\item Find the area of a rhombus if its vertices are $(3,0), (4,5), (-1,4) \text{ and } (-2,-1)$ taken in order. [$\vec{Hint}$ : Area of rhombus =$\displaystyle \frac 12 $(product of its diagonals)]
+\item Find the area of a rhombus if its vertices are $(3,0), (4,5), (-1,4) \text{ and } (-2,-1)$ taken in order. [$\vec{Hint}$ : Area of rhombus =$\displaystyle \frac 12$(product of its diagonals)]
 
 \end{enumerate}
 
