--- a/ide/figure/assignment1.tex
+++ b/ide/figure/assignment1.tex
@@ -76,11 +76,15 @@ columns=fullflexible
 
  \section{Abstract}
  
-      The objective of this manual is to show how to obtain the output expression for the karnaugh map shown above :
+      The objective of this manual is to show how to obtain the output expression from the given karnaugh map shown below :
       
       \begin{center}
-      Y=QR'+S
-      \end{center}
+      \begin{karnaugh-map}[4][4][1][$PQ$][$RS$]
+
+		\minterms{1,3,4,5,7,6,12,13,15,14}
+		\maxterms{0,2,8,9,10,11}
+	\end{karnaugh-map}      
+	\end{center}
 
 \section{Introduction}
   
