--- a/ide/figure/assignment1.tex
+++ b/ide/figure/assignment1.tex
@@ -76,7 +76,7 @@ columns=fullflexible
 
  \section{Abstract}
  
-      The objective of this manual is to show how to obtain the output expression from the given karnaugh map shown below :
+      The objective of this manual is to obtain the output expression from the given karnaugh map shown below :
       
       \begin{center}
       \begin{karnaugh-map}[4][4][1][$PQ$][$RS$]
