--- a/latexmath/coordinates.tex
+++ b/latexmath/coordinates.tex
@@ -40,9 +40,9 @@ ground ABCD, lines have
 drawn with chalk powder at a                 
 distance of 1m each. 100 flower pots have been placed at a distance of 1m 
 from each other along AD, as shown 
-in Fig. 7.12. Niharika runs $ \frac 14 $th the 
+in Fig. 7.12. Niharika runs $ \frac {1}{4} $th the 
 distance AD on the 2nd line and 
-posts a green flag. Preet runs $ \frac 15 $th 
+posts a green flag. Preet runs $ \frac {1}{5} $th 
 the distance AD on the eighth line 
 and posts a red flag. What is the 
 distance between both the flags? If 
@@ -61,9 +61,9 @@ she post her flag?
 \item Find the ratio in which the line segment joining $A(1,-5) \text{ and } B(-4,5)$ $\text{is divided by the x-axis}$. Also find the coordinates of the point of division.
 \item If $(1,2), (4,y), (x,6), (3,5)$ are the vertices of a parallelogram taken in order, find x and y.
 \item Find the coordinates of a point A, where AB is the diameter of a circle whose centre is $(2,-3) \text{ and }$ B is $(1,4)$.
-\item If A \text{ and } B are $(-2,-2) \text{ and } (2,-4)$, respectively, find the coordinates of P such that AP= $\frac 37$AB $\text{ and }$ P lies on the line segment AB.
+\item If A \text{ and } B are $(-2,-2) \text{ and } (2,-4)$, respectively, find the coordinates of P such that AP= $\frac {3}{7}$AB $\text{ and }$ P lies on the line segment AB.
 \item Find the coordinates of the points which divide the line segment joining $A(-2,2) \text{ and } B(2,8)$ into four equal parts.
-\item Find the area of a rhombus if its vertices are $(3,0), (4,5), (-1,4) \text{ and } (-2,-1)$ taken in order. [$\vec{Hint}$ : Area of rhombus =$\frac 12$(product of its diagonals)]
+\item Find the area of a rhombus if its vertices are $(3,0), (4,5), (-1,4) \text{ and } (-2,-1)$ taken in order. [$\vec{Hint}$ : Area of rhombus =$\frac {1}{2}$(product of its diagonals)]
 
 \end{enumerate}
 
