--- a/Vector/7.2/prob2.tex
+++ b/Vector/7.2/prob2.tex
@@ -25,7 +25,7 @@ The coordinates and ratio are given as:
 \begin{align}
 \vec{P}=\myvec{-1\\7\\},
 \vec{Q}=\myvec{4\\-3\\},
-n=\frac{3}{2}\\
+n=\frac{3}{2}
 \end{align}
 Using section formula:
 \begin{align}
