--- a/Vector/10.7.4.2/prob4.tex
+++ b/Vector/10.7.4.2/prob4.tex
@@ -81,7 +81,7 @@ If the rank of the matrix has to be 1 , then:
 \begin{align}
 -\frac{1}{3}(x-1)-(y-2)=0
 \end{align}
-The straight line equation is represented in vector line form as follows: 
+The straight line equation is represented in vector form of a line as follows: 
 \begin{align}
 		n^{\top}X=C\\
 		\myvec{1 & 3}X=7
