--- a/lines/11.10.4.2/line3.tex
+++ b/lines/11.10.4.2/line3.tex
@@ -23,28 +23,17 @@ of the line $\sqrt{3}x+y+2=0$.
 \\
 \solution
 \\
-From the given line equation:
-	\begin{align}
-		\vec{m}&=-\sqrt{3}\\
-		c&=-2
-	\end{align}
-        The directional vector is given by:
-	\begin{align}
-		\vec{m}&=\myvec{1\\-\sqrt{3}\\}
-	\end{align}
-	The normal vector is given by:
+From the given line equation normal vector is given by:
 		\begin{align}
-	\vec{n}&=\myvec{-\sqrt{3}\\-1\\}\\
-	\vec{n}^\top&=\myvec{-\sqrt{3} & -1}
-			\end{align}
-	Angle between perpendicular and the positive $x$-axis is given by:
-		\begin{align}
-		\cos\theta&=\frac{\vec{e}_{1}^\top\vec{n}}{\norm{\vec{e}_{1}}\norm{\vec{n}}}\\
-			&=\frac{\myvec{1&0\\}\myvec{-\sqrt{3} \\ -1\\}}{2}\\
-			&=-\frac{\sqrt{3}}{2}\\
-			\implies	\theta&=210\degree
+	\vec{n}&=\myvec{\sqrt{3}\\1\\}\\
+			c&=-2
 		\end{align}
-	The perpendicular distance to the line is given by:
+	Angle $\theta$ is given by:
+		\begin{align}
+		\tan\theta={\sqrt{3}}\\
+		\implies \theta=60\degree
+		\end{align}
+	The perpendicular distance $p$ to the line is given by:
 		\begin{align}
 			p=\frac{|c|}{\norm{\vec{n}}}=\frac{2}{2}=1
 		\end{align}
