--- a/lines/11.10.4.2/line3.tex
+++ b/lines/11.10.4.2/line3.tex
@@ -33,7 +33,7 @@ From the given line equation normal vector is given by:
 		\tan\theta={\sqrt{3}}\\
 		\implies \theta=60\degree
 		\end{align}
-	The perpendicular distance $p$ to the line is given by:
+	The perpendicular distance $p$ is given by:
 		\begin{align}
 			p=\frac{|c|}{\norm{\vec{n}}}=\frac{2}{2}=1
 		\end{align}
