--- a/lines/11.10.4.2/line3.tex
+++ b/lines/11.10.4.2/line3.tex
@@ -28,9 +28,9 @@ From the given line equation normal vector is given by:
 	\vec{n}&=\myvec{-\sqrt{3}\\1\\}\\
 			c&=-2
 		\end{align}
-	Angle $\theta$ is given by:
+	Slope of normal form is given by:
 		\begin{align}
-		\tan\theta=-{\sqrt{3}}\\
+			\tan\theta=\frac{1}{{\sqrt{3}}}\\
 		\implies \theta=210\degree
 		\end{align}
 	The perpendicular distance $p$ is given by:
