--- a/lines/11.10.4.2/line3.tex
+++ b/lines/11.10.4.2/line3.tex
@@ -30,8 +30,10 @@ From the given line equation normal vector is given by:
 		\end{align}
 	Slope of normal form is given by:
 		\begin{align}
-			\tan\theta=-\frac{1}{m}=\frac{1}{{\sqrt{3}}}\\
-		\implies \theta=210\degree
+			m&=-\sqrt{3}\\
+		\tan\theta&=-\frac{1}{m}\\
+			&=\frac{1}{{\sqrt{3}}}\\
+		\implies \theta&=210\degree
 		\end{align}
 	The perpendicular distance $p$ is given by:
 		\begin{align}
