--- a/lines/11.10.4.2/line3.tex
+++ b/lines/11.10.4.2/line3.tex
@@ -25,14 +25,12 @@ of the line $\sqrt{3}x+y+2=0$.
 \\
 From the given line equation normal vector is given by:
 		\begin{align}
-	\vec{n}&=\myvec{-\sqrt{3}\\1\\}\\
+	\vec{n}&=\myvec{\sqrt{3}\\1\\}\\
 			c&=-2
 		\end{align}
-	Slope of normal form is given by:
+	The angle $\theta$ is given by:
 		\begin{align}
-			m&=-\sqrt{3}\\
-		\tan\theta&=-\frac{1}{m}\\
-			&=\frac{1}{{\sqrt{3}}}\\
+			\tan\theta&=-\sqrt{3}\\
 		\implies \theta&=210\degree
 		\end{align}
 	The perpendicular distance $p$ is given by:
