--- a/lines/12.11.2.1/line4.tex
+++ b/lines/12.11.2.1/line4.tex
@@ -21,42 +21,41 @@
 Q1. Show that the three lines with direction cosines $\frac{12}{13}, \frac{-3}{13}, \frac{-4}{13}; \frac{4}{13}, \frac{12}{13}, \frac{3}{13}; \frac{3}{13}, \frac{-4}{13}, \frac{12}{13}$ are mutually perpendicular.
 \\
 \solution
-Check whether direction cosines of lines $\vec{A} \text{ and } \vec{B}$ are mutually perpendicular or not:
+\begin{enumerate}
+\item Check whether angle between the $\vec{A} \text{ and } \vec{B}$ are mutually perpendicular or not:
 		\begin{align}
-\vec{A}&=\myvec{\frac{12}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\\\}\\
-\vec{B}&=\myvec{\frac{4}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\\\}\\
+		\vec{A}=\myvec{\frac{12}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\},\vec{B}=\myvec{\frac{4}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\}
 		\end{align}
-	Direction of cosines is given by:
+	Angle between the vectors is given by:
 		\begin{align}
 			\cos\theta_1&=\frac{\vec{A}^\top\vec{B}}{\norm{\vec{A}}\norm{\vec{B}}}\\
-			&=\frac{\myvec{\frac{12}{13}&\frac{-3}{13}&\frac{-4}{13}}\myvec{\frac{4}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\\\}}{1}\\
+			&=\frac{\myvec{\frac{12}{13}&\frac{-3}{13}&\frac{-4}{13}}\myvec{\frac{4}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\}}{1}\\
 			&=0\\
 			\implies \theta_1&=90\degree
 		\end{align}
-Check whether direction cosines of lines $\vec{B} \text{ and } \vec{C}$ are mutually perpendicular or not:
+	\item Check whether angle between the $\vec{B} \text{ and } \vec{C}$ are mutually perpendicular or not:
                   \begin{align}
-  \vec{B}&=\myvec{\frac{4}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\\\}\\
-  \vec{C}&=\myvec{\frac{3}{13}\\\\\frac{-4}{13}\\\\\frac{-12}{13}\\\\}\\
+  \vec{B}=\myvec{\frac{4}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\},\vec{C}=\myvec{\frac{3}{13}\\\\\frac{-4}{13}\\\\\frac{-12}{13}\\}
 		  \end{align}
-Direction of cosines is given by:
+Angle between the vectors is given by:
 \begin{align}
                           \cos\theta_2&=\frac{\vec{B}^\top\vec{C}}{\norm{\vec{B}}\norm{\vec{C}}}\\
-        &=\frac{\myvec{\frac{4}{13}&\frac{-3}{13}&\frac{-4}{13}}\myvec{\frac{3}{13}\\\\\frac{-4}{13}\\\\\frac{-12}{13}\\\\}}{1}\\
+        &=\frac{\myvec{\frac{4}{13}&\frac{-3}{13}&\frac{-4}{13}}\myvec{\frac{3}{13}\\\\\frac{-4}{13}\\\\\frac{-12}{13}\\}}{1}\\
                           &=0\\
 		  \implies \theta_2&=90\degree
 		  \end{align}
-Check whether direction cosines of lines $\vec{A} \text{ and } \vec{C}$ are mutually perpendicular or not:
+	  \item Check whether angle between the $\vec{A} \text{ and } \vec{C}$ are mutually perpendicular or not:
                    \begin{align}
-    \vec{A}&=\myvec{\frac{12}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\\\}\\
-			   \vec{C}&=\myvec{\frac{3}{13}\\\\\frac{-4}{13}\\\\\frac{-12}{13}\\\\}\\    
+    \vec{A}&=\myvec{\frac{12}{13}\\\\\frac{-3}{13}\\\\\frac{-4}{13}\\}, \vec{C}=\myvec{\frac{3}{13}\\\\\frac{-4}{13}\\\\\frac{-12}{13}\\}    
 		   \end{align}
-	Direction of cosines is given by:
+	Angle between the vectors is given by:
 	\begin{align}
                           \cos\theta_3&=\frac{\vec{A}^\top\vec{C}}{\norm{\vec{A}}\norm{\vec{C}}}\\
-   &=\frac{\myvec{\frac{12}{13}&\frac{-3}{13}&\frac{-4}{13}}\myvec{\frac{3}{13}\\\\\frac{-4}{13}\\\\\frac{-12}{13}\\\\}}{1}\\                  
+   &=\frac{\myvec{\frac{12}{13}&\frac{-3}{13}&\frac{-4}{13}}\myvec{\frac{3}{13}\\\\\frac{-4}{13}\\\\\frac{-12}{13}\\}}{1}\\                  
 			   &=0\\
 		   \implies \theta_3&=90\degree  
 		   \end{align}
-Hence, all three lines are mutually perpendicualr to each other
+Hence, all three lines are mutually perpendicualr to each other.
+\end{enumerate}
 \end{document}
 
