--- a/lines/12.11.2.1/line4.tex
+++ b/lines/12.11.2.1/line4.tex
@@ -29,10 +29,7 @@ Q1. Show that the three lines with direction cosines $\frac{12}{13}, \frac{-3}{1
 			\begin{align}
 				\vec{P}=\myvec{\frac{12}{13}&\frac{4}{13}    &\frac{3}{13}\\[2pt] \frac{-3}{13}&\frac{12}{13}&\frac{-4}{13}\\[2pt] \frac{-4}{13}&\frac{3}{13}&\frac{12}{13}}, \vec{P}^\top=\myvec{\frac{12}{13}&\frac{-3}{13}   &\frac{-4}{13}\\[2pt] \frac{4}{13}&\frac{12}{13}&\frac{3}{13}\\[2pt] \frac{3}{13}&\frac{-4}{13}&\frac{12}{13}}
 			\end{align}
-	Check whether:
-		\begin{align}
-		\vec{P}\vec{P}^\top=\vec{I}
-		\end{align}
+Check whether $\vec{P}\vec{P}^\top=\vec{I}$
 		\begin{align}
 			\myvec{\frac{12}{13}&\frac{4}{13}    &\frac{3}{13}\\[2pt] \frac{-3}{13}&\frac{12}{13}&\frac{-4}{13}\\[2pt] \frac{-4}{13}&\frac{3}{13}&\frac{12}{13}}\myvec{\frac{12}{13}&\frac{-3}{13}   &\frac{-4}{13}\\[2pt] \frac{4}{13}&\frac{12}{13}&\frac{3}{13}\\[2pt] \frac{3}{13}&\frac{-4}{13}&\frac{12}{13}}=\myvec{1&0&0\\[2pt]0&1&0\\[2pt]0&0&1}
 		\end{align}
