--- a/lines/12.11.2.1/line4.tex
+++ b/lines/12.11.2.1/line4.tex
@@ -40,8 +40,9 @@ Q1. Show that the three lines with direction cosines $\frac{12}{13}, \frac{-3}{1
 	\vec{P}^\top\vec{P}=\vec{I}\\
 				\myvec{\frac{12}{13}&\frac{-3}{13}    &\frac{-4}{13}\\[2pt] \frac{4}{13}&\frac{12}{13}&\frac{3}{13}\\[2pt] \frac{3}{13}&\frac{-4}{13}&\frac{12}{13}}\myvec{\frac{12}{13}&\frac{4}{13}   &\frac{3}{13}\\[2pt] \frac{-3}{13}&\frac{12}{13}&\frac{-4}{13}\\[2pt] \frac{-4}{13}&\frac{3}{13}&\frac{12}{13}}&=\myvec{1&0&0\\[2pt]0&1&0\\[2pt]0&0&1}=\vec{I}
 		\end{align}
-					Hence, it satisfies the above conditions, that all three vectors are orthogonal(perpendicular) to each other.
 			\end{enumerate}
+					Hence, it satisfies both the above conditions, shows  that all three vectors are orthogonal(perpendicular) to each other.
+			
 \end{document}
 
 
