--- a/lines/12.11.3.1/line5.tex
+++ b/lines/12.11.3.1/line5.tex
@@ -45,7 +45,7 @@ the plane and the distance from the origin.
 	\cos\theta_i=1,2,3
 	\end{align}
 	
-		So for different values of $\cos\theta_i$ the direction cosines of vector $\vec{n}$ are
+		For different values of $\cos\theta_i$ the direction cosines of vector $\vec{n}$ are
 		\begin{align}
 			\cos\theta_1=\frac{\myvec{1&0&0}\myvec{0 \\ 0\\1}}{1}=0\\
 			\cos\theta_2=\frac{\myvec{0&1&0}\myvec{0 \\ 0\\1}}{1}=0\\
@@ -60,7 +60,7 @@ the plane and the distance from the origin.
          \begin{align}
 		\vec{n}=\myvec{1\\1\\1},c=1
 			\end{align}
-	So for different values of $\cos\theta_i$ the direction cosines of vector $\vec{n}$ are		
+	 For different values of $\cos\theta_i$ the direction cosines of vector $\vec{n}$ are		
 		\begin{align}
 		\cos\theta_1=\frac{\myvec{1&0&0}\myvec{1 \\ 1\\1}}{\sqrt{3}}=\frac{1}{\sqrt{3}}\\
 			\cos\theta_2=\frac{\myvec{0&1&0}\myvec{1 \\ 1\\1}}{\sqrt{3}}=\frac{1}{\sqrt{3}}\\
@@ -75,7 +75,7 @@ the plane and the distance from the origin.
          \begin{align}
 		\vec{n}=\myvec{2\\3\\-1},c=5
 			\end{align}
-	So for different values of $\cos\theta_i$ the direction cosines of vector $\vec{n}$ are
+	For different values of $\cos\theta_i$ the direction cosines of vector $\vec{n}$ are
 		\begin{align}
 		\cos\theta_1=\frac{\myvec{1&0&0}\myvec{2 \\ 3\\-1}}{\sqrt{14}}=\frac{2}{\sqrt{14}}\\
 			\cos\theta_2=\frac{\myvec{0&1&0}\myvec{2 \\ 3\\-1}}{\sqrt{14}}=\frac{3}{\sqrt{14}}\\
@@ -90,7 +90,7 @@ the plane and the distance from the origin.
          \begin{align}
 		\vec{n}=\myvec{0\\-5\\0},c=8
 			\end{align}
-	So for different values of $\cos\theta_i$ the direction cosines of vector $\vec{n}$ are
+	For different values of $\cos\theta_i$ the direction cosines of vector $\vec{n}$ are
 		\begin{align}
 		\cos\theta_1=\frac{\myvec{1&0&0}\myvec{0 \\ -5\\0}}{5}=0\\
 			\cos\theta_2=\frac{\myvec{0&1&0}\myvec{0 \\ -5\\0}}{5}=-1\\
