--- a/lines/12.11.4.1/line6.tex
+++ b/lines/12.11.4.1/line6.tex
@@ -31,19 +31,12 @@ From the given points $\vec{A}\text{ and }\vec{B}$, the directional vector is gi
 		\begin{align}
 	\vec{m}=\vec{A}-\vec{B}=\myvec{-1\\2\\0}
 		\end{align}
-		\begin{enumerate}
-			\item check whether two vectors are perpendicular to each other or not using:
+			 check whether two vectors are perpendicular to each other or not using:
 		\begin{align}
 			\vec{m}^\top\vec{P}=&0\\
 			\myvec{-1&2&0}\myvec{2\\1\\1}&=0
 		\end{align}
-	\item check whether two vectors are perpendicular to each other or not using:
-	\begin{align}
-		\vec{P}^\top\vec{m}=&0\\
-			  \myvec{2&1&1}\myvec{-1\\2\\0}&=0
-                  \end{align}
-		\end{enumerate}
-				Hence, it satisfies both the above conditions, shows that line passing through origin is perpendiclar to the line passing through points $\vec{A} \text{ and } \vec{B}$.
+				Hence, it satisfies the above condition, shows that line passing through origin is perpendiclar to the line passing through points $\vec{A} \text{ and } \vec{B}$.
 		
 \end{document}
 
