--- a/lines/12.11.4.1/line6.tex
+++ b/lines/12.11.4.1/line6.tex
@@ -36,7 +36,7 @@ From the given points $\vec{A}\text{ and }\vec{B}$, the directional vector is gi
 			\vec{m}^\top\vec{P}=&0\\
 			\myvec{-1&2&0}\myvec{2\\1\\1}&=0
 		\end{align}
-				Hence, it satisfies the above condition, shows that line passing through origin is perpendiclar to the line passing through points $\vec{A} \text{ and } \vec{B}$.
+				Hence, it satisfies the above condition, shows that the line passing through origin is perpendiclar to the line passing through points $\vec{A} \text{ and } \vec{B}$.
 		
 \end{document}
 
