--- a/circles/11.11.1.2/circle.tex
+++ b/circles/11.11.1.2/circle.tex
@@ -18,7 +18,7 @@
 \end{center}
 \section*{Excercise 11.1}
 
-Q1.Find the equation of the circle with centre $(-2,3)$ and radius 4.
+Q2.Find the equation of the circle with centre $(-2,3)$ and radius 4.
 
 \solution
 \\
@@ -42,11 +42,10 @@ Now substituting the values the equation of circle can be given as
 	\norm{\vec{x}}^2 + 2\vec{u}^\top\vec{x}-1 &= 0\\
 	\norm{\vec{x}}^2 + 2\vec{u}^\top\vec{x} &= 1\\
 	\text{ where } \vec{u} = \myvec{2\\-3}        		       
-\end{align}
-As shown in Figure \ref{fig:Fig1}	
+\end{align}	
 \begin{figure}[!h]
 	\begin{center} 
-	    \includegraphics[width=\columnwidth]{figs/line.png}
+	    \includegraphics[width=\columnwidth]{figs/circle.png}
 	\end{center}
 \caption{}
 \label{fig:Fig1}
