--- a/circles/11.11.1.2/circle.tex
+++ b/circles/11.11.1.2/circle.tex
@@ -13,12 +13,12 @@
 
 \begin{document}
 \begin{center}
-\textbf\large{CHAPTER-11 \\ CIRCLES}
+\textbf\large{CLASS-11\\CHAPTER-11 \\ CIRCLES}
 
 \end{center}
 \section*{Excercise 11.1}
 
-Q2.Find the equation of the circle with centre $(-2,3)$ and radius 4.
+Q2. Find the equation of the circle with centre $(-2,3)$ and radius 4.
 
 \solution
 \\
@@ -33,15 +33,13 @@ The equation of the circle is given as
 Where,
 \begin{align}
 	\vec{u} &= -\vec{c} \text{ and } f = \norm{\vec{u}}^{2} - r^{2}\\
-	\vec{u} &= \myvec{2\\-3},\norm{\vec{u}} = \sqrt{13}\\
-	f &= \norm{\vec{u}}^2 - r^2\\
-	&= (\sqrt{13})^2 - 4^2= -1
+	\vec{u} &= \myvec{2\\-3},\vec{u}^\top=\myvec{2&-3},\norm{\vec{u}} = \sqrt{13}\\
+	f &= \norm{\vec{u}}^2 - r^2= -1
 \end{align}
-Now substituting the values the equation of circle can be given as
+Substituting those values in the equation of circle, we get:
 \begin{align}
 	\norm{\vec{x}}^2 + 2\vec{u}^\top\vec{x}-1 &= 0\\
-	\norm{\vec{x}}^2 + 2\vec{u}^\top\vec{x} &= 1\\
-	\text{ where } \vec{u} = \myvec{2\\-3}        		       
+	\norm{\vec{x}}^2 + 2\myvec{2&-3}\vec{x} &= 1    		       
 \end{align}	
 \begin{figure}[!h]
 	\begin{center} 
