--- a/circles/9.10.5.1/circle2.tex
+++ b/circles/9.10.5.1/circle2.tex
@@ -28,17 +28,15 @@ Q1. In Figure 1. A,B,C are the three points with centre O such that $\angle$BOC=
 \section*{\large Construction}
 
 
-
-The input parameters are the lengths
-
-
-
 \begin{table}[htbp]
  \begin{center}
     \begin{tabular}{|l|c|c|c|c|c|c} \hline \textbf{Symbol}
   & \textbf{value} & \textbf{Description} \\
  \hline
-O & & centre \\ \hline
+	    O &input parameter & Centre \\ \hline
+POC &input parameter& Diameter \\ \hline
+OA and OB&input parameter& Radius \\ \hline
+AD and CD &input parameter& Chords \\ \hline
 $\angle$BOC &30$^\circ$ & Angle between vectors B and C  \\ \hline
 $\angle$AOB&60$^\circ$&Angle between vectors A and B\\
 	\hline
@@ -55,13 +53,13 @@ $\angle$AOB&60$^\circ$&Angle between vectors A and B\\
 \item To find $\angle$ADC let the circle be unit circle and diameter POC on x axis.
 \item Take three points C,A,D  and $\alpha$,$\beta$,$\gamma$ be three angles made by the points C,A,D with respect to diameter POC.
 \end{enumerate}
-From the Figure 2:
+From the Figure 1:
 \begin{align}
 \vec{\alpha} = \vec{\angle POC}= 180^\circ, 
 \vec{\beta} = \vec{\angle POA} = 90^\circ,
 \vec{\gamma} = \vec{\angle POD}
 \end{align}
-\section*{Proof:}
+\section*{Verification:}
 From assumptions the vector points C,A,D be
 \begin{align}
 	\vec{C} = \myvec{cos\alpha\\sin\alpha},
