--- a/circles/9.10.5.1/circle2.tex
+++ b/circles/9.10.5.1/circle2.tex
@@ -33,10 +33,11 @@ Q1. In Figure 1. A,B,C are the three points with centre O such that $\angle$BOC=
     \begin{tabular}{|l|c|c|c|c|c|c} \hline \textbf{Symbol}
   & \textbf{value} & \textbf{Description} \\
  \hline
-	    O &input parameter & Centre \\ \hline
-POC &input parameter& Diameter \\ \hline
-OA and OB&input parameter& Radius \\ \hline
-AD and CD &input parameter& Chords \\ \hline
+	    O &(1,0) & Centre \\ \hline
+POC &2 units& Diameter\\ \hline
+	 OA and OB &1 unit& Radius\\ \hline
+ AD  &A(1,1) and D(0.5,-0.86) & Chord of AD \\ \hline
+CD  &C(2,0) and D(0.5,-0.86) & Chord of CD \\ \hline
 $\angle$BOC &30$^\circ$ & Angle between vectors B and C  \\ \hline
 $\angle$AOB&60$^\circ$&Angle between vectors A and B\\
 	\hline
