--- a/circles/9.10.5.1/circle2.tex
+++ b/circles/9.10.5.1/circle2.tex
@@ -38,14 +38,14 @@ POC &2 units& Diameter of the circle\\ \hline
 	 r &1 unit& Radius of OA and OB\\ \hline
 	    chord1  &$\vec{A}(1,1) \text{ and } \vec{D}(0.5,-0.86)$ & Chord of AD \\ \hline
 	    chord2  &$\vec{C}(2,0) \text{ and } \vec{D}(0.5,-0.86)$ & Chord of CD \\ \hline
-	    $\alpha$ & 180\degree&Angle between vectors P and C \\ \hline
-	    $\beta$ & 90\degree&Angle between vectors P and A \\ \hline
-	    $\gamma$ & 300\degree&Angle between vectors P and D \\ \hline
+	    $\alpha$ & 180\degree&Angle between vectors $\vec{P} \text{ and } \vec{C}$ \\ \hline
+	    $\beta$ & 90\degree&Angle between vectors $\vec{P} \text{ and } \vec{A}$ \\ \hline
+	    $\gamma$ & 300\degree&Angle between vectors $\vec{P} \text{ and } \vec{D}$ \\ \hline
 
-$\angle$BOC &30\degree & Angle between vectors B and C  \\ \hline
-$\angle$AOB&60\degree&Angle between vectors A and B\\
+	    $\angle$BOC &30\degree & Angle between vectors $\vec{B} \text{ and } \vec{C}$  \\ \hline
+	    $\angle$AOB&60\degree&Angle between vectors $\vec{A} \text{ and } \vec{B}$\\
 	\hline
-	$\angle$ADC&??&Angle between vectors A and C \\
+	    $\angle$ADC&??&Angle between vectors $\vec{A} \text{ and } \vec{C}$ \\
 	\hline
 \end{tabular}   
 \end{center}
